# AlgoVoi-Platform-Adapters

./: .gitignore  LICENSE  LICENSE-PLUGINS.md  README.md  SMOKE.md  WPORG_SUBMISSION.md  allegro.md  amazon.md  bigcommerce.md  bolcom.md  caip2-algorand.md  cdiscount.md  cex.md  discord.md  ebay.md  ecwid.md  etsy.md  faire.md  flipkart.md  freshbooks.md  glama.json  instagram-shops.md  jumia.md  lazada.md  magento.md  mercadolibre.md  myob.md  onbuy.md  opencart.md  prestashop.md  printful.md  printify.md  quickbooks-online.md  rakuten.md  sage-business-cloud.md  shopee.md  shopify.md  shopware.md  smoke_7chain.py  squarespace.md  (+19 more)
.claude/: launch.json
Recurr/: HOSTED_AUTH_DESIGN.md  README.md
ai-agent-frameworks/: README.md
allegro/: README.md  allegro_algovoi.py  test_allegro.py
amazon-mws/: README.md  amazon_algovoi.py  security_replay.py  test_amazon.py
ap2-adapter/: README.md  ap2-adapter.md  ap2.py  test_ap2.py
bigcommerce/: README.md  bigcommerce_algovoi.py  test_bigcommerce.py
bolcom/: README.md  bolcom_algovoi.py  test_bolcom.py
cdiscount/: README.md  cdiscount_algovoi.py  test_cdiscount.py
cex/: README.md  cex_algovoi.py  test_cex.py
compliance/: ACCEPTABLE_USE_POLICY.md  ACCESS_CONTROL_POLICY.md  AML_POLICY.md  BUSINESS_CONTINUITY_PLAN.md  BWRA.md  CDD_EDD_PROCEDURE.md  CHANGE_MANAGEMENT_POLICY.md  COMPLAINTS_PROCEDURE.md  CUSTOMER_RISK_SCORING_MATRIX.md  DATA_BREACH_PROCEDURE.md  DPA_TEMPLATE.md  INCIDENT_RESPONSE_PLAN.md  INFORMATION_SECURITY_POLICY.md  PEP_SCREENING_PROCEDURE.md  README.md  RETENTION_PROCEDURE.md  ROPA.md  SANCTIONS_PROCEDURE.md  TRANSACTION_MONITORING_PROCEDURE.md  VENDOR_MANAGEMENT_POLICY.md
discord/: README.md  discord_algovoi.py  test_discord.py
drupal-commerce/: README.md  commerce_algovoi.info.yml  commerce_algovoi.routing.yml  smoke_test_drupal.py
easy-digital-downloads/: README.md  algovoi-edd.php  smoke_test_edd.py
ebay/: README.md  ebay_algovoi.py  test_ebay.py
ecwid/: README.md  ecwid_algovoi.py  test_ecwid.py
etsy/: README.md  etsy_algovoi.py  test_etsy.py
faire/: README.md  faire_algovoi.py  test_faire.py
flipkart/: README.md  flipkart_algovoi.py  test_flipkart.py
freshbooks/: README.md
ghost/: README.md  ghost_algovoi.py  smoke_test_ghost.py
instagram-shops/: README.md  instagram_algovoi.py  test_instagram.py
jumia/: README.md  jumia_algovoi.py  test_jumia.py
lazada/: README.md  lazada_algovoi.py  test_lazada.py
magento2/: README.md
mcp-server/: .dockerignore  Dockerfile  GLAMA_SUBMISSION.md  LICENSE  MCPSO_SUBMISSION.md  README.md  server.json  smoke_mcp_a2a.py  smoke_mcp_full.py  smoke_stdio.py
mcp-server/python/: README.md  pyproject.toml
mcp-server/python/algovoi_mcp/: __init__.py  __main__.py  audit.py  bridge.py  client.py  idempotency.py  networks.py  redact.py  schemas.py  server.py
mcp-server/python/tests/: test_tools.py
mercadolibre/: README.md  mercadolibre_algovoi.py  test_mercadolibre.py
mpp-adapter/: README.md  mpp-adapter.md  mpp.py  smoke_test_full.py  smoke_test_mpp.py  test_mpp.py
myob/: README.md
native-go/: README.md  algovoi.go  example_test.go  go.mod  recurring.go  recurring_test.go  (+1 more)
(+384 files in other folders)
