[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "algovoi-mcp"
version = "1.4.0"
description = "MCP server for AlgoVoi — create crypto payment links, verify payments, generate MPP / x402 / AP2 / A2A challenges, and manage Tier 2 standing-authority subscriptions on 7 chains, from any MCP client (Claude Desktop, Claude Code, Cursor, Windsurf). 21 tools across one-shot payments, agent-protocol challenges, A2A messaging, and recurring billing (Algorand, VOI, Base, Tempo, Solana, Hedera, Stellar)."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "AlgoVoi" }
]
keywords = ["mcp", "model-context-protocol", "algovoi", "payments", "crypto", "usdc", "algorand", "voi", "hedera", "stellar", "base", "solana", "tempo"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp>=1.26.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
algovoi-mcp = "algovoi_mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/chopmob-cloud/AlgoVoi-Platform-Adapters"
Repository = "https://github.com/chopmob-cloud/AlgoVoi-Platform-Adapters"

[tool.setuptools.packages.find]
include = ["algovoi_mcp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
